Disable CLA sync workflow cron

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,8 +2,8 @@ name: Incremental data sync with CLA response Google Sheet
 
 on:
   workflow_dispatch: {}
-  schedule:
-    - cron: '*/5 * * * *'
+#  schedule:
+#    - cron: '*/5 * * * *'
 
 jobs:
   sync:
